# walletpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile0old  README.md  buildios.sh  ios.toolchain.cmake
bench/: CMakeLists.txt  address_generation_bench.h  address_generation_multicore_bench.h  bench.cpp  keccak256_bench.h  sha256_bench.h
cmake/: botan.cmake  cgminer.cmake  csprng.cmake  fastpbkdf2.cmake  keccak256.cmake  libbase58.cmake  picosha2.cmake  secp256k1.cmake  sha3iuf.cmake
cmake/modules/: AddSwift.cmake  InitializeSwift.cmake
include/: bip32.h  bip39.h  bip44.h  coin_type.h  constants.h  crypto_algorithms.h  entropy.h  ethereum_utils.h  extended_key.h  hd_node.h  hd_trie.h  master_key_generator.h  module.modulemap  secp256k1_context_singleton.h  secure_vector.h  walletpp.h  wordlist.h
ios/: CMakeLists.txt
ios/cmake/modules/: AddSwift.cmake
ios/include/bip44/: bip44.h
ios/include/walletpp/: fibonacci.h
ios/lib/fibonacci/: CMakeLists.txt  fibonacci.cpp
ios/lib/walletpp/: CMakeLists.txt
ios/src/: fibonacci.cpp  fibonacci.swift
nixos/: default.nix  setup.sh  shell.nix
osx/: CMakeLists.txt
osx/include/walletpp/: module.modulemap
osx/lib/walletpp/: fibonacci.cpp
osx/src/: CMakeLists.txt
scripts/: build-ios-mac.sh
src/: bip32.cpp  bip32.h  bip39.cpp  bip39.h  bip44.cpp  coin_type.cpp  coin_type.h  constants.h  crypto_algorithms.cpp  crypto_algorithms.h  entropy.cpp  entropy.h  ethereum_utils.cpp  ethereum_utils.h  extended_key.cpp  extended_key.h  fibonacci.h  hd_derivation.cpp  hd_derivation.h  hd_node.cpp  hd_node.h  hd_trie.cpp  hd_trie.h  key_pair.cpp  key_pair.h  master_key_generator.cpp  master_key_generator.h  module.modulemap  secp256k1_context_singleton.cpp  secp256k1_context_singleton.h  secure_vector.cpp  secure_vector.h  walletpp.cpp  wordlist.h
test/: CMakeLists.txt  bip32_tests.cpp  bip39_tests.cpp  entropy_test.cpp  hd_derivation_tests.cpp  hd_trie_tests.cpp  master_key_gen_tests.cpp  secure_vector_imp.h  secure_vector_tests.cpp  test.cpp
vanity-address-generator/: CMakeLists.txt  README.md  bench.cpp  decrypt_file.h  encrypt_file.h  encryption_vars.h  main.cpp  wallet_information.h
